[workspace]
resolver = "2"
members = ["xtask", "oryx-tui", "oryx-common"]

[workspace.package]
description = "TUI for sniffing network traffic using eBPF"
authors = ["Badr Badri <contact@pythops.com>"]
readme = "Readme.md"
license = "GPL-3.0"
edition = "2021"
repository = "https://github.com/pythops/oryx"
homepage = "https://github.com/pythops/oryx"

[profile.release]
lto = "fat"
strip = true
codegen-units = 1
