[package]
name = "oryx-common"
version = "0.1.0"
description = "oryx common"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true


[lib]
path = "src/lib.rs"

[dependencies]
network-types = { git = "https://github.com/vadorovsky/network-types.git", rev = "e0ee8d5" }
