[package]
name = "oryx-common"
description = "oryx common"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true


[lib]
path = "src/lib.rs"

[dependencies]
network-types = "0.0.7"
strum = { version = "0.27", default-features = false, features = ["derive"] }
