[package]
name = "oryx-ebpf"
version.workspace = true
description = "oryx eBPF"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true

[dependencies]
aya-ebpf = "0.1.1"
oryx-common = { path = "../oryx-common" }
network-types = "0.0.7"

[[bin]]
name = "oryx"
path = "src/main.rs"

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = "fat"
panic = "abort"
codegen-units = 1

[workspace]
members = []
