[package]
name = "oryx-ebpf"
version = "0.7.2"
description = "oryx eBPF"
license = "GPL-3.0"
edition = "2024"
repository = "https://github.com/pythops/oryx"
homepage = "https://github.com/pythops/oryx"

[dependencies]
aya-ebpf = "0.1.1"
oryx-common = { path = "../oryx-common" }
network-types = { git = "https://github.com/vadorovsky/network-types", rev = "b78424c" }

[[bin]]
name = "oryx"
path = "src/main.rs"

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = "fat"
panic = "abort"
codegen-units = 1
strip = false

[workspace]
members = []
