[package]
name = "oryx-tui"
version.workspace = true
description.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true

[dependencies]
crossterm = { version = "0.28", default-features = false }
ratatui = "0.29"
tui-big-text = "0.7"
tui-input = "0.11"
libc = "0.2"
aya = "0.13"
oryx-common = { path = "../oryx-common" }
mio = { version = "1", features = ["os-poll", "os-ext"] }
itertools = "0.14"
dirs = "6"
kanal = "0.1"
mimalloc = "0.1"
clap = { version = "4", features = ["derive", "cargo"] }
network-types = "0.0.7"
uuid = { version = "1", default-features = false, features = ["v4", "serde"] }
log = "0.4"
env_logger = "0.11"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
regex = "1"

[[bin]]
name = "oryx"
path = "src/main.rs"
