[package]
name = "oryx-tui"
version.workspace = true
description.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true

[dependencies]
crossterm = "0.29"
ratatui = { version = "0.29", features = ["unstable-widget-ref"] }
tui-big-text = "0.7"
tui-input = "0.12"
libc = "0.2"
aya = "0.13"
oryx-common = { path = "../oryx-common" }
mio = { version = "1", features = ["os-poll", "os-ext"] }
itertools = "0.14"
dirs = "6"
kanal = { version = "0.1", default-features = false }
mimalloc = "0.1"
clap = { version = "4", features = ["derive", "cargo"] }
network-types = { workspace = true }
uuid = { version = "1", default-features = false, features = ["v4", "serde"] }
log = "0.4"
env_logger = "0.11"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
regex = "1"
chrono = "0.4"
strum = { version = "0.27", features = ["derive"] }
anyhow = "1"
branches = "0.3"
cacheguard = "0.1"
rustc-hash = "2.1.1"

[[bin]]
name = "oryx"
path = "src/main.rs"
